--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,41 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="UTF-8">
-	<title>Weather Journal</title>
-	<link rel="stylesheet" href="style.css">
+		<meta charset="utf-8">
+		<title>Travel Planner</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-		<body>
-			<div id = "app">
-				<div class ="holder headline">
-					Weather Journal App
-				</div>
-				<div class ="holder zip">
-					<label for="zip">Enter Zip code here</label>
-					<input type="text" id="zip" placeholder="enter zip code here">
-				</div>
-					
-				<div class ="holder feel">
-					<label for="feelings">How are you feeling today?</label>
-					<textarea class= "myInput" id="feelings" placeholder="Enter your feelings here"></textarea>
-					<button id="generate" type="submit">Generate</button>
-				</div>
-				<div class = "title">Most Recent Entry</div>
-				<div id = "entryHolder"></div>
-				<div id = "date"></div> 
-				<div id = "temp"></div>
-				<div id = "content"></div>
+	<body>
+		<header>
+			<div class="header-logo">
+				<a href="/" title="Inspirock Trip Planner" >
+					<img src="/img/Travel Planner.svg" alt="">
+				</a>
+				<span class="tagline">Inspiration to see the planet</span>
 			</div>
-			<script>
-				if ('serviceWorker' in navigator) {
-				window.addEventListener('load', () => {
-					navigator.serviceWorker.register('/service-worker.js').then(registration =>{
-						console.log('SW registered successfuly: ', registration);
-					});
+		</header>
+		<script>
+			if ('serviceWorker' in navigator) {
+			window.addEventListener('load', () => {
+				navigator.serviceWorker.register('/service-worker.js').then(registration =>{
+					console.log('SW registered successfuly: ', registration);
 				});
-				}else{
-				console.log("Service Working not supported");
-				}
-			</script>
-		</body>
+			});
+			}else{
+			console.log("Service Working not supported");
+			}
+		</script>
+	</body>
 </html>
