--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,6 +33,9 @@
 							  <label for="date">Start:</label>
 							  <input type="date" name="startDate" min="2020-06-01" max="2021-08-31" id="startDate">
 							</li>
+							<li>
+								<input type="submit" name="submit" value="See My Plan" id="submitButton">
+							</li>
 						</ul>
 					</form>
 				</div>
