Feat Added api creds in server.js and it's corresponding route to be called from front js Added submitHandler function to fetch and handle user input Added util.js for utilities functions

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,12 +26,12 @@
 					<form>
 						<ul>
 							<li>
-							  <label for="dist">Name:</label>
-							  <input type="text" id="dist" name="user_name">
+							  	<label for="dist">Name:</label>
+							  	<input type="text" id="dist" name="user_name">
 							</li>
 							<li>
-							  <label for="date">Start:</label>
-							  <input type="date" name="startDate" min="2020-06-01" max="2021-08-31" id="startDate">
+							  	<label for="date">Start:</label>
+							  	<input type="date" name="startDate" id="startDate">
 							</li>
 							<li>
 								<input type="submit" name="submit" value="See My Plan" id="submitButton">
