feat added sass styling fixed some html typos

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -13,9 +13,6 @@
 				</a>
 				<span>Inspiration to see the planet</span>
 			</div>
-			<div class="plans-nav"> 
-
-			</div>
 		</header>
 		<main>
 			<div class="input-section">
@@ -26,11 +23,11 @@
 					<form>
 						<ul>
 							<li>
-							  	<label for="dist">Name:</label>
-							  	<input type="text" id="dist" name="user_name">
+							  	<label for="dist">Going to:</label>
+							  	<input type="text" id="dist" name="user_name" placeholder="Enter City">
 							</li>
 							<li>
-							  	<label for="date">Start:</label>
+							  	<label for="date">Departing Date:</label>
 							  	<input type="date" name="startDate" id="startDate">
 							</li>
 							<li>
