--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -1,103 +1,67 @@
+
+html{
+    min-width: 100%;
+    min-height: 100%;
+}
 body{
-    background: #fffff8;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-}
-
-#app{
-    display: flex;
-    flex-direction: column;
-    height:100vh;
-    background: #691625;
-    color: #ffffff;
-    justify-content: space-around;
-    align-content: space-around;
-    justify-items: center;
-    align-items: center;
-    border-radius: 10px;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-}
-
-.holder{
-    text-align: center;
-}
-
-#date, #temp, #content{
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(222,188,66,1) 58%, rgba(253,187,45,1) 100%);  
+    font-family: 'Lato',sans-serif;
     color: white;
+    text-shadow: 2px 2px 10px black;
 }
 
-.headline {
-    font-size: xx-large;
-}
-.title{
-    color: gray;
-    background-color: honeydew;
-    border-radius: 10px;
-    padding: 20px;
-}
-
-/*  Basic Styling To Override Default For Basic HTML Elements */
-label{
-    display:block;
-    font-size: 27px;
-}
-
-input{
-    display:block;
-    height: 60px;
-    width: 320px;
-    color: gray;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-    border: none;
-    border-radius: 10px;
-}
-
-button{
-    margin: 20px;
-    width: 200px;
-    height: 10vh;
-    background: #3b4a6b;
+.header-logo {
     color: white;
-    font-size: 26px;
-    font-family: 'Oswald', sans-serif;
-    box-shadow: 2px 4px 5px #444;
-    border-radius: 10px;
-}
-h1{
-    font-size: 36px;
+    span {
+        font-size: 25px;
+        text-justify: center;
+        display: none;
+    }
 }
 
-textarea{
-    display: block;
-    color: gray;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-    min-width: 320px;
-    border-radius: 10px;
+.input-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    min-height: 50vh;
+    min-width: 90vw;
+    
+    .main-text {
+        grid-column: 1;
+        justify-self: center;
+        align-self: center;
+        min-width: 30vw;
+    }
+
+    .input-form {
+        display: flex-box;
+        background-color: white;
+        box-shadow: 0.4px 0.4px 5px black;
+        color: black;
+        min-width: 40vw;
+        min-height: 40vh;
+        border-radius: 10px;
+        grid-column: 2;
+        justify-self: center;
+        align-self: center;
+        input {
+            min-width: 50%;
+            margin: 20px;
+            height: 50px;
+            border-radius: 20px;
+            border: 2px solid cyan;
+            font-size: 25px;
+            padding-left: 10px;
+            color: gray;
+        }
+
+        label {
+            font-size: 30px;
+            color: gray;
+            text-shadow: none;
+        }
+        ul {
+            list-style-type: none;
+        }
+    }
 }
-/* Reset style for HTML element on active to have no border*/
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-    outline: none;
-}
-/* Style for Placeholder Text*/
-::placeholder { /* Firefox, Chrome, Opera */ 
-    font-family: 'Oswald', sans-serif;
-    color: gray;
-    text-align: center;
-} 
-  
-:-ms-input-placeholder { /* Internet Explorer 10-11 */ 
-    font-family: 'Oswald', sans-serif;
-    color: gray;
-    text-align: center;
-} 
-  
-::-ms-input-placeholder { /* Microsoft Edge */ 
-    font-family: 'Oswald', sans-serif;
-    color: gray;
-    text-align: center;
-} 
+
